--- a/nodejs-app/package.json
+++ b/nodejs-app/package.json
@@ -2,10 +2,10 @@
   "name": "nodejs-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon --inspect src/index.js"
   },
   "keywords": [],
   "author": "",
