--- a/nodejs-app/package.json
+++ b/nodejs-app/package.json
@@ -17,6 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "keycloak-connect": "^23.0.4",
     "knex": "^3.1.0",
     "mssql": "^10.0.2",
     "mysql": "^2.18.1",
