connect new daatbase

--- a/nodejs-app/.env
+++ b/nodejs-app/.env
@@ -1,6 +1,13 @@
-DB_HOST=127.0.0.1
+# DB_HOST=127.0.0.1
+# DB_PORT=1433
+# DB_USER=sa
+# DB_PASSWORD=519h0320
+# DB_NAME=data_test
+# PORT=8000
+
+DB_HOST=10.10.14.182
 DB_PORT=1433
-DB_USER=sa
-DB_PASSWORD=519h0320
-DB_NAME=data_test
+DB_USER=mnrcenter
+DB_PASSWORD=Ceh@123456
+DB_NAME=MNR_CENTER
 PORT=8000
